--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,39 @@
 	</head>
 	<body>
 		<div>
-  			<h1>It is a Small World!</h1>
+			<h1>Map Average Prices in US Regions</h1>
+  			<h3>Select a Product to compare:</h3>
+
+			<form action="/productmap" method="post" name="productcode">
+				<select name="productcode">
+				  <option value="701111">Flour, white, all purpose, per lb. (453.76 gm)</option>
+				  <option value="701312">Rice, white, long grain, uncooked, per lb. (453.6 gm)</option>
+				  <option value="702111">Bread, white, pan, per lb. (453.6 gm)</option>
+				  <option value="703112">Ground beef, 100% beef, per lb. (453.6 gm)</option>
+				  <option value="703613">Steak, sirloin, USDA Choice, boneless, per lb. (453.6 gm)</option>
+				  <option value="704111">Bacon, sliced, per lb. (453.6 gm)</option>
+				  <option value="705111">Frankfurters, all meat or all beef, per lb. (453.6 gm)</option>
+				  <option value="706111">Chicken, fresh, whole, per lb. (453.6 gm)</option>
+				  <option value="707111">Tuna, light, chunk, per lb. (453.6 gm)</option>
+				  <option value="708111">Eggs, grade A, large, per doz.</option>
+				  <option value="709112">Milk, fresh, whole, fortified, per gal. (3.8 lit)</option>
+				  <option value="710111">Butter, salted, grade AA, stick, per lb. (453.6 gm)</option>
+				  <option value="710122">Yogurt, natural, fruit flavored, per 8 oz. (226.8 gm)</option>
+				  <option value="711111">Apples, Red Delicious, per lb. (453.6 gm)</option>
+				  <option value="712112">Potatoes, white, per lb. (453.6 gm)</option>
+				  <option value="715211">Sugar, white, all sizes, per lb. (453.6 gm)</option>
+				  <option value="716141">Peanut butter, creamy, all sizes, per lb. (453.6 gm)</option>
+				  <option value="717311">Coffee, 100%, ground roast, all sizes, per lb. (453.6 gm)</option>
+				  <option value="720311">Wine, red and white table, all sizes, any origin, per 1 liter (33.8 oz)</option>
+				  <option value="72511">Fuel oil per gallon (3.785 liters)</option>
+				  <option value="72610">Electricity per KWH</option>
+				  <option value="7471A">Gasoline, all types, per gallon/3.785 liters</option>
+
+				</select> <br><br>
+				<input type="submit" value="Submit">
+			</form>
+
+			
 		</div>
 	</body>
 </html>
